app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  overflow-y: auto;
  font-family: 'Montserrat', sans-serif;
  background-color: rgb(0 0 0 / 97%);
}

body {
  background-image: url('./bg2.png');
  background-size: cover;
  background-repeat: no-repeat;
  background-position: right top;
  position: relative;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  overflow-y: auto; /* Enable vertical scrolling */
}

#root, #__next {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

main {
  flex-grow: 1;
  flex-direction: column;
  display: flex;
  justify-content: center;
  align-items: center;
}

footer {
  margin-top: auto;
}

h1, h2, h3, h4, h5, h6, p, span, li, a {
  font-family: 'Montserrat', sans-serif;
  color: rgb(255 255 255);
  letter-spacing: 0.025em;
}

.leaflet-container {
  height: 100% !important;
  width: 100% !important;
  border-radius: 10px !important;
  position: relative !important;
}

.button-primary, .button-secondary {
  font-size: 12px; /* Smaller text size for mobile */
  padding-left: 30px; /* Smaller padding for mobile */
  padding-right: 30px;
  padding-top: 22px;
  padding-bottom: 22px;
}

.button-secondary {
  text-color: var(--tw-color-primary)!important;
}

body > div > div > main > div > div.flex.justify-center.w-full > div > div > div.leaflet-control-container > div.leaflet-top.leaflet-left > div > a.leaflet-control-zoom-in.leaflet-disabled,
body > div > div > main > div > div.flex.justify-center.w-full > div > div > div.leaflet-control-container > div.leaflet-top.leaflet-left > div > a.leaflet-control-zoom-out {
  background: hsl(201.82deg 4.51% 52.44%)!important;
}


@media (max-width: 767px) {
  .map-container {
    width: 100%;
    height: 50vh;
  }

  .map {
    width: 50%!important;
  }

  .button-primary, .button-secondary {
    font-size: 12px; /* Smaller text size for mobile */
    padding-left: 30px; /* Smaller padding for mobile */
    padding-right: 30px;
    padding-top: 22px;
    padding-bottom: 22px;
  }
}

@media (min-width: 768px) {
  .map-container {
    width: 60%;
    height: 70vh;
  }

  .button-primary, .button-secondary {
  font-size: 14px; /* Text size equivalent to text-[14px] */
  padding-left: 1.5rem; /* Padding left equivalent to px-6 */
  padding-right: 1.5rem; /* Padding right equivalent to px-6 */
  padding-top: 0.75rem; /* Padding top equivalent to py-3 */
  padding-bottom: 0.75rem; /* Padding bottom equivalent to py-3 */
  }
}

